Fri Jul 30 12:52:34 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Code tidy

Thu Jul 29 16:27:01 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Don't say "waiting for some to exit" if dont_wait is set

Thu Jul 29 07:38:42 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Use GETHOSTBYNAME_R_6
			Better load balancing if max_children = 0

Thu Jul 29 03:31:22 CEST 2004 (tk)
----------------------------------
  * freshclam/clamd: fix crash on PPC when LogFile was enabled together with
		     LogSyslog

Thu Jul 29 02:43:13 CEST 2004 (tk)
----------------------------------
  * configure: improve gethostbyname_r check; cleanups

Wed Jul 28 22:21:10 CEST 2004 (tk)
----------------------------------
  * clamdscan: fix stdin scanning in local mode (patch by Stephen Gran
	       <steve*lobefin.net>)

Wed Jul 28 20:09:32 CEST 2004 (tk)
----------------------------------
  * libclamav: improve mail detection

Wed Jul 28 01:10:46 CEST 2004 (tk)
----------------------------------
  * libclamav: md5: fix possible infinite loop in cl_free(); check file
	       size to eliminate potential false positive alerts

Mon Jul 26 14:24:24 BST 2004 (njh)
----------------------------------
  * clamav-milter:	%v in the template file handling is now replaced
	only with the virus name, no "stream:" appears

Mon Jul 26 10:13:04 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:		Fix crash when debugging on SPARC

Mon Jul 26 09:31:39 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Fix occasional crash when scanning
	multipart within multipart e-mails

Sun Jul 25 12:52:07 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fixed warning message when building on FreeBSD4.9
			Closed (small) memory leak
			Fix crash when the 1st remote service goes down
			Only use gethostbyname_r on LINUX for now
			Improved load balancing a bit

Fri Jul 23 00:40:18 CEST 2004 (tk)