@@ -448,6 +448,7 @@ Changes
 0.75c	29/7/04	Better load balancing if max_children = 0
 		Use HAVE_GETHOSTBYNAME_R_6
 0.75d	29/7/04	Don't say "waiting for some to exit" if --dont-wait
+0.75e	30/7/04	Handle new clamd message when StreamMaxLength is exceeded
 
 BUG REPORTS
 
